<?xml version="1.0"?>
<package format="2">
  <name>rospy_template</name>
  <version>0.0.0</version>
  <description>rospy_template description</description>
  <maintainer email="liamondrop@gmail.com">Liam Bowers</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/rospy-template</url>
  <url type="bugtracker">https://github.com/rospy-template/issues</url>

  <author>Liam Bowers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>
